[tool.poetry]
name = "functional_helpers"
version = "0.1.0"
description = ""
authors = ["Mikey Mo <mikeyjkmo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
