[tool.poetry]
name = "functional_helpers"
version = "0.1.0"
description = ""
authors = ["Mikey Mo <mikeyjkmo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.14.0"
mypy = "^0.942"
pytest = "^7.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
